# whatsapp-ecommerce-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  claude.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_tables.py
docs/: CHECKPOINT_FASE2.md  ENTREGA_CLIENTE.md  GABARITO_PROVA.md  GUIA_COMPLETO_PROJETO.md  GUIA_DE_ESTUDO.md  GUIA_TESTE_WHATSAPP.md  PROVA_30_QUESTOES.md
src/: __init__.py  main.py
src/application/: __init__.py
src/application/dtos/: __init__.py  message_dto.py
src/application/usecases/: __init__.py  handle_message.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  customer.py  order.py  product.py  session.py
src/domain/repositories/: __init__.py  customer_repository.py  order_repository.py  product_repository.py  session_repository.py
src/domain/services/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/cache/: __init__.py
src/infrastructure/database/: __init__.py  connection.py  models.py
src/infrastructure/database/repositories/: __init__.py  sqlalchemy_customer_repository.py  sqlalchemy_order_repository.py  sqlalchemy_product_repository.py  sqlalchemy_session_repository.py
src/infrastructure/whatsapp/: __init__.py  client.py  webhook.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py  dependencies.py
src/presentation/api/routes/: __init__.py  webhook.py
src/presentation/whatsapp/: __init__.py  handler.py
src/shared/: __init__.py
src/shared/errors/: __init__.py
src/shared/types/: __init__.py  enums.py
src/shared/utils/: __init__.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py
tests/unit/application/: __init__.py
tests/unit/application/usecases/: __init__.py  test_handle_message.py
tests/unit/domain/: __init__.py
tests/unit/domain/entities/: __init__.py  test_customer.py  test_order.py  test_product.py  test_session.py
tests/unit/infrastructure/: __init__.py
tests/unit/infrastructure/database/: __init__.py  test_models.py  test_sqlalchemy_customer_repository.py
tests/unit/infrastructure/whatsapp/: __init__.py  test_webhook.py
